syntax="proto3";
package user_grpc;

service UserHandler {
    rpc Find(UserID) returns (User);
    rpc GetNames(Nothing) returns (Users);
}

message Nothing {
    bool dummy=1;
}

message UserID {
    int64 ID=1;
}

message Users {
    repeated string names=1;
}

message User {
    int64 ID=1;
    string FirstName=2;
    string SecondName=3;
    string UserName=4;
    string Email=5;
    string Password=6;
    string EncryptPassword=7;
    string UserType=8;
    int64 FreelancerId=9;
    int64 HireManagerId=10;
    int64 CompanyId=11;
    bytes Avatar=12;
}